force-app/main/default/objects/Collateral_Account__c/Collateral_Account__c.object-meta.xml
<CustomObject>
    <label>Collateral Account</label>
    <nameField>
        <displayFormat>CA-{0000000000}</displayFormat>
        <label>Collateral Account No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collateral Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>