force-app/main/default/objects/Collateral_Account__c/fields/col_type__c.field-meta.xml
<CustomField>
    <fullName>col_type__c</fullName>
    <description>รหัสประเภทหลักประกัน</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>รหัสประเภทหลักประกัน</inlineHelpText>
    <label>Col Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>