force-app/main/default/objects/Collateral_Account__c/fields/col_type_desc__c.field-meta.xml
<CustomField>
    <fullName>col_type_desc__c</fullName>
    <description>ประเภทหลักประกัน</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ประเภทหลักประกัน</inlineHelpText>
    <label>Col Type Desc</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>