force-app/main/default/objects/Collateral_Account__c/fields/Collateral_Detail__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collateral Detail</label>
    <referenceTo>Collateral_Detail__c</referenceTo>
    <relationshipLabel>Collateral Account</relationshipLabel>
    <relationshipName>Collateral_Account</relationshipName>
    <type>Lookup</type>
</CustomField>