force-app/main/default/objects/Collateral_Account__c/fields/tmb_account_id__c.field-meta.xml
<CustomField>
    <fullName>tmb_account_id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TMB Account ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>