force-app/main/default/objects/Collateral_Account__c/fields/tmb_product_type_cd__c.field-meta.xml
<CustomField>
    <fullName>tmb_product_type_cd__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TMB Product Type CD</label>
    <length>10</length>
    <type>Text</type>
</CustomField>